Bug 430085 - The text displaying that a folder is empty does not wait for its content to load
Summary: The text displaying that a folder is empty does not wait for its content to load
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-12-06 16:13 UTC by Claudius Ellsel
Modified: 2021-01-17 14:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudius Ellsel 2020-12-06 16:13:39 UTC
SUMMARY
As described in https://bugs.kde.org/show_bug.cgi?id=426354#c4. Basically while the folder still loads the message that the folder is empty is displayed until the content is loaded. This seems to be especially prominent for network drives with longer loading times.

Creating this bug so it has its own place to be tracked and followed.
Comment 1 Nate Graham 2020-12-06 17:49:57 UTC
Will fix.
Comment 2 Kai Uwe Broulik 2020-12-30 16:23:35 UTC
Any update?
Comment 3 Nate Graham 2020-12-30 17:41:05 UTC
No, but I'll get it done before it's released in 21.04. :)
Comment 4 Kai Uwe Broulik 2021-01-17 14:15:09 UTC
Git commit 2e79e21c3f4da5183b516e0088f2137c4f27ceff by Kai Uwe Broulik.
Committed on 17/01/2021 at 13:32.
Pushed by broulik into branch 'master'.

[DolphinView] Fix "Folder is empty" label showing prematurely

Don't show the label while still loading. Since there is no property in
`KDirLister` a dedicated `m_loading` is added for this purpose.

Also, I removed the explicit update on `urlChanged` as the view
probably won't change until the lister starts loading.

M  +16   -6    src/views/dolphinview.cpp
M  +7    -0    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/commit/2e79e21c3f4da5183b516e0088f2137c4f27ceff