[DolphinView] Fix "Folder is empty" label showing prematurely

Don't show the label while still loading. Since there is no property in
`KDirLister` a dedicated `m_loading` is added for this purpose.

Also, I removed the explicit update on `urlChanged` as the view
probably won't change until the lister starts loading.

BUG: 430085